    parameter.  Reflection also fixed.  [ticket:2073]

- informix

  - Added RESERVED_WORDS informix dialect. [ticket:2092]

- mysql
  - oursql dialect accepts the same "ssl" arguments in 
    create_engine() as that of MySQLdb.  [ticket:2047]

- firebird
  - The "implicit_returning" flag on create_engine() is
    honored if set to False.  [ticket:2083]

- declarative
  - Added an explicit check for the case that the name
    'metadata' is used for a column attribute on a 
    declarative class. [ticket:2050]

  - Fix error message referencing old @classproperty
    name to reference @declared_attr [ticket:2061]

  - Arguments in __mapper_args__ that aren't "hashable"
    aren't mistaken for always-hashable, possibly-column
    arguments.  [ticket:2091]

0.6.6
=====
- orm
  - Fixed bug whereby a non-"mutable" attribute modified event
    which occurred on an object that was clean except for
    preceding mutable attribute changes would fail to strongly
    reference itself in the identity map. This would cause the
    object to be garbage collected, losing track of any changes
    that weren't previously saved in the "mutable changes"
    dictionary.

  - Fixed bug whereby "passive_deletes='all'" wasn't passing
    the correct symbols to lazy loaders during flush, thereby
    causing an unwarranted load.  [ticket:2013]

  - Fixed bug which prevented composite mapped
    attributes from being used on a mapped select statement. 
    [ticket:1997]. Note the workings of composite are slated to 
    change significantly in 0.7.

  - active_history flag also added to composite(). 
    The flag has no effect in 0.6, but is instead 
    a placeholder flag for forwards compatibility,
    as it applies in 0.7 for composites.
    [ticket:1976]

  - Fixed uow bug whereby expired objects passed to 
    Session.delete() would not have unloaded references 
    or collections taken into account when deleting
    objects, despite passive_deletes remaining at 